Working/leavemanger 3 (#3)
* The spec implementation and the running of app is work
